ajout Menu principale dans la couche presentation et fixing sonarqube issues